# pixel-studio

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REFACTORING_REPORT.md  ROADMAP.md  TESTING.md  _fix_emoji.js  app.js  index.html  manifest.json  plugin-loader.js  styles.css  sw.js
.github/workflows/: lighthouse.yml  pages.yml
docs/: phase-c-plan.md  v2-f2-f3-plan.md  v2-final-plan.md  v2-plan.md
docs/architecture/: CODEX-KNOWLEDGEBASE.md  REFACTORING-REPORT.md
plugins/: dither-filters.js  index.json  palette-exchange.js
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
