[package]
name = "pixel-studio"
version = "2.0.0"
description = "Pixel art editor with layers, animation, and palette generator"
authors = ["REDrighthand05"]
edition = "2021"

[lib]
name = "pixel_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
